2007-07-06  Adam Roben  <aroben@apple.com>

        Add another Leopard failure

        * mac/leopard/Skipped:

2007-07-06  Adam Roben  <aroben@apple.com>

        Add another crasher to the Skipped file

        Also moved a test that had a bug filed about it out of the section of
        unfiled failures.

        * win/Skipped:

2007-07-06  Anders Carlsson  <andersca@apple.com>

        Reviewed by Alexey.

        <rdar://problem/5313518> fast/events/iframe-object-onload.html shows events out of order on Leopard
        
        Fix test so that it doesn't matter in what order the frames/objects are loaded. This is done by keeping
        the load logs in an array and sort it before dumping it.
        
        * fast/events/iframe-object-onload-expected.txt:
        * fast/events/iframe-object-onload.html:
        * mac/leopard/Skipped:

2007-07-06  Anders Carlsson  <andersca@apple.com>

        Reviewed by Alexey.

        <rdar://problem/5313512> fast/frames/frame-set-same-{location,src}.html sometimes hang on Leopard
        
        Make these tests more robust against frames loading in a different order. Also, turn the tests 
        into text tests and remove them from the Leopard skipped list.
        
        * fast/frames/frame-set-same-location-expected.checksum: Removed.
        * fast/frames/frame-set-same-location-expected.png: Removed.
        * fast/frames/frame-set-same-location-expected.txt:
        * fast/frames/frame-set-same-location.html:
        * fast/frames/frame-set-same-src-expected.checksum: Removed.
        * fast/frames/frame-set-same-src-expected.png: Removed.
        * fast/frames/frame-set-same-src-expected.txt:
        * fast/frames/frame-set-same-src.html:
        * mac/leopard/Skipped:

2007-07-06  Mark Rowe  <mrowe@apple.com>

        Unreviewed.  Update test results.

        * fast/encoding/utf-32-big-endian-bom-expected.txt:
        * fast/encoding/utf-32-big-endian-nobom-expected.txt: